--- a/devwidgets/notice/pages/sakai.news.html
+++ b/devwidgets/notice/pages/sakai.news.html
@@ -4,7 +4,7 @@
     <head>
     
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Sakai 3 R&amp;D - News</title>
+        <title>Sakai 3 R&amp;D - Notice</title>
     	<meta name="author" content="meikidd"><!-- Date: 2010-09-11 -->
 
         <!-- Sakai Core CSS -->
@@ -14,7 +14,7 @@
         <link rel="stylesheet" type="text/css" href="/dev/_css/sakai/sakai.3.css" />
 
         <!-- Sakai Page CSS -->
-        <link rel="stylesheet" type="text/css" href="/devwidgets/news/pages/css/sakai.news.css" />
+        <link rel="stylesheet" type="text/css" href="/devwidgets/notice/pages/css/sakai.news.css" />
 
         <!-- 3rd party CSS -->
         <link rel="stylesheet" type="text/css" href="/dev/_css/sakai/sakai.components.jq_pager.css" />
@@ -22,7 +22,7 @@
         <link rel="stylesheet" type="text/css" href="/dev/_css/lib/jquery.autoSuggest.css" />
 
         <!-- Fluid Pager CSS -->
-        <link rel="stylesheet" type="text/css" href="/devwidgets/news/pages/css/pager.css" />
+        <link rel="stylesheet" type="text/css" href="/devwidgets/notice/pages/css/pager.css" />
 
         <!-- Sakai Config JS -->
         <script type="text/javascript" src="/dev/_configuration/widgets.js"></script>
@@ -57,13 +57,13 @@
         <!--Dialog JS-->
         <script type="text/javascript" src="/dev/_lib/jquery/plugins/jqmodal.sakai-edited.js"></script>
         <!-- Fluid Pager JS -->
-        <script type="text/javascript" src="/devwidgets/news/pages/javascript/lib/Fluid.js"></script>
-        <script type="text/javascript" src="/devwidgets/news/pages/javascript/lib/DataBinding.js"></script>
-        <script type="text/javascript" src="/devwidgets/news/pages/javascript/lib/fastXmlPull.js"></script>
-        <script type="text/javascript" src="/devwidgets/news/pages/javascript/lib/fluidParser.js"></script>
-        <script type="text/javascript" src="/devwidgets/news/pages/javascript/lib/fluidRenderer.js"></script>
-        <script type="text/javascript" src="/devwidgets/news/pages/javascript/lib/Pager.js"></script>
-        <script type="text/javascript" src="/devwidgets/news/pages/javascript/pager.js"></script>
+        <script type="text/javascript" src="/devwidgets/notice/pages/javascript/lib/Fluid.js"></script>
+        <script type="text/javascript" src="/devwidgets/notice/pages/javascript/lib/DataBinding.js"></script>
+        <script type="text/javascript" src="/devwidgets/notice/pages/javascript/lib/fastXmlPull.js"></script>
+        <script type="text/javascript" src="/devwidgets/notice/pages/javascript/lib/fluidParser.js"></script>
+        <script type="text/javascript" src="/devwidgets/notice/pages/javascript/lib/fluidRenderer.js"></script>
+        <script type="text/javascript" src="/devwidgets/notice/pages/javascript/lib/Pager.js"></script>
+        <script type="text/javascript" src="/devwidgets/notice/pages/javascript/pager.js"></script>
         
         <script type="text/javascript" src="/dev/_lib/jquery/plugins/jquery.form.js"></script>
         <script type="text/javascript" src="/dev/_lib/tiny_mce/tiny_mce.js" charset="utf-8"></script>
@@ -91,7 +91,7 @@
 
                 <!-- TITLE BAR  -->
                 <div class="s3d-site-heading">
-                    <h1 id="sitetitle">__MSG__NEWS_SAKAINEWS__</h1>
+                    <h1 id="sitetitle">__MSG__NOTICE_SAKAINOTICE__</h1>
                 </div>
             </div>
         </div>
@@ -111,7 +111,7 @@
                         <form name="my-news" action="" method="post">
 
                             <div class="top_decor">
-                                <div class="news-heading news_news_header" id="news_news">__MSG__NEWS_NEWS__</div>
+                                <div class="news-heading news_news_header" id="news_news">__MSG__NOTICE_NOTICE__</div>
                             </div>
                             <div id="main_content_container" class="main_content_container">
                                 <div id="news_no_news_msg" class="news_no_news_msg" style="display:none;">__MSG__NEWS_NO_NEWS_FOUND__</div>    
@@ -271,7 +271,7 @@
         <div id="news_generalmessages_nr_new_messages" style="display:none;"> <span class="news_bold news_filter_nrMessages">(__NR__)</span></div>
         <span id="news_generalmessages_notice" style="display:none;">__MSG__YOUR_MESSAGE_HAS_BEEN_SENT__.</span>
 
-        <script type="text/javascript" src="/devwidgets/news/pages/javascript/sakai.news.js"></script>
+        <script type="text/javascript" src="/devwidgets/notice/pages/javascript/sakai.news.js"></script>
 
     </body>
 </html>
